# py.chroma.mcp

./: .env.example  .gitignore  ASYNCIO_MIGRATION.md  CHANGELOG.md  Dockerfile  EMBEDDING_SUCCESS_REPORT.md  FINAL_INTEGRATION_SUMMARY.md  INTEGRATION_PLAN.md  MCP_UPGRADE_PLAN.md  README.md  REAL_DATA_TEST_RESULTS.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_v2.0.md  RELEASE_NOTES_v2.1.md  claude_desktop_config.json  demo_showcase.py  pyproject.toml  test_real_web_data.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: chroma-workflow-template.md  python-coding-conventions.md  test-method.md
.github/chatmodes/: claude-sonnet-4.chatmode.md  gpt-4.1.chatmode.md
.github/instructions/: chroma-workflow.instructions.md  python.instructions.md
.github/prompts/: darwin-testing.prompt.md  elon-design.prompt.md
.tools/: clean_test_file_in_workspace.py  project_analyzer.py  project_structure.md
docs/: Advanced-Darwin-Principles.md  ERROR_HANDLING_SUMMARY.md  LLM_OPTIMIZATION_IMPLEMENTATION_PLAN_20250618.md  PROJECT_OPTIMIZATION_PLAN_20250618.md  Road-map.md  ai_ml.txt  ai_vietnam.txt  programming_vietnam.txt  rust_basics.txt  tech_vietnam.txt  vietnamese_tech.txt
src/: __init__.py  config.py  models.py  server.py  server_mcp_standard.py  server_mcp_standard_simple.py  tools.py
src/embedding/: __init__.py  auth.py  batch_processor.py  chunker.py  manager.py  nomic_embedding_function.py
src/tools/: chroma.py
src/utils/: __init__.py  error_handler.py  logger.py  metrics.py  metrics_simple.py  model_loader.py  validators.py
tests/: mixedbread_rag_chroma.py  mixedbread_rag_improved.py  test_fastmcp_server.py  verify_embedding_integration.py
tests/reports/: nomic_model_768D_report.md  nomic_model_768D_report_202506172038.md
tests/sandbox/: demo_chromadb_embedding.py  demo_nomic_v2.py  demo_nomic_v2_batch.py  demo_nomic_v2_semantic_chunk.py
