[project]
name = "py-chroma-mcp"
version = "0.1.0"
description = "A simple Model Context Protocol (MCP) server using stdio."
authors = [
    { name = "Mai Thành Duy An", email = "tiachop0102@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.12",
    "mcp>=1.0.0"
]

[project.scripts]
chroma-mcp = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
#line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
