[project]
name = "py-chroma-mcp"
version = "2.1.0"
description = "A Model Context Protocol (MCP) server with Vietnamese text support and ChromaDB integration."
authors = [
    { name = "Mai Thành Duy An", email = "tiachop0102@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.12",
    "einops>=0.8.1",
    "mcp>=1.0.0",
    "psutil>=7.0.0",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
]

[project.scripts]
chroma-mcp = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
#line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
